# PLTS3

./: .gitignore  CMakeLists.txt  PLTS3.c  PLTS3.glade  README.md
PAPER-TAPES/: A104-tape1  A104-tape2  Kingfisher.data  StraightCurves  chaos.binary  fibbignum.ele
